[package]
name = "dynamic_range"
version = "0.2.0"
edition = "2021"

[features]
clap = ["dep:clap"]

[dependencies]
clap = { version = "4.5.8", default-features = false, features = [
    "std",
], optional = true }
num-traits = "0.2.19"
once_cell = "1.19.0"
regex-lite = "0.1.6"
thiserror = "1.0.61"
